move and update index.html

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -8,7 +8,7 @@
 <div>
     <p>
         Im diesem Projekt wurde eine abgespekte Version von Socrative umgesetzt, also ein "Socrative Light".
-        Das Socartive Light enthält folgende Funktionen,
+        Das Socartive Light enthält folgende Funktionen:
     </p>
     <ul>
         <li>
@@ -16,17 +16,16 @@
         </li>
         <li>
             Der Lehrer kann Fragen erstellen
-            Es gibt folgende Fragetypen:
-            - schriftliche Kurzantworten
-            - True/False
+            Es gibt folgende Fragetypen: Schriftliche Kurzantworten undTrue/False (Is text question).
             Bei True/False-Fragen kann true oder false ausgewählt werden.
             Bei schriftlichen Kurzantworten kann der Schüler eine Antwort in ein Textfeld schreiben.
         </li>
         <li>
-            Ein Schüler sieht die vom Lehrer erstellten Fragen. Er kann die Fragen durchgehen und beantworten sowie am Ende des Quizzes die Fragen absenden.
+            Ein Schüler sieht die vom Lehrer erstellten Fragen. Er kann die Fragen durchgehen und beantworten, am Ende
+            de Quizzes werden die Fragen gesendet.
         </li>
         <li>
-            Der Lehrer kann ein Report ausgeben, in dem die Antworten der Schüler ersichtlich sind.
+            Der Lehrer kann ein Report ausgeben, in dem die Antworten aller Schüler ersichtlich sind.
         </li>
     </ul>
 </div>
